<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/inputThing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        android:background="#C6DEF7"
        android:elevation="5dp"
        android:hint="@string/type_new_thing"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        android:padding="20dp"
        android:textColorHint="#455A64"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputThing"
        android:layout_marginTop="20dp"
        android:id="@+id/calendar"/>

    <EditText
        android:id="@+id/inputTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        android:layout_margin="15dp"
        android:background="#C6DEF7"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/type_time_like_14_05"
        android:importantForAutofill="no"
        android:inputType="time"
        android:padding="20dp"
        android:text=""
        android:textColorHint="#455A64"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTime"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        android:id="@+id/add"
        android:backgroundTint="#2196F3"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>